--- a/deb/arx-libertatis/debian/changelog
+++ b/deb/arx-libertatis/debian/changelog
@@ -1,5 +1,5 @@
-arx-libertatis (0.99+1.0rc5-0.1) stable; urgency=low
+arx-libertatis (1.0-0.1) stable; urgency=low
 
   * Initial release
 
- -- Daniel Scharrer <daniel@constexpr.org>  Sun, 01 Apr 2012 06:35:24 +0200
+ -- Daniel Scharrer <daniel@constexpr.org>  Sun, 19 Apr 2012 07:16:26 +0200
