--- a/tar/README
+++ b/tar/README
@@ -61,7 +61,7 @@ options. This is what the `play` script does.
 
 For other systems like **Linux**, the data files can be in
 `/usr/local/share/games/arx` and `/usr/share/games/arx` as well as other
-locations depending on your linux distribution. Config files are normally
+locations depending on your Linux distribution. Config files are normally
 located in `~/.config/arx` while save files are stored in `~/.local/share/arx`.
 
 ## Run
@@ -95,7 +95,7 @@ You can close it with `Alt + F4` or `killall arx`
 ## Scripts
 
 The `scripts` directory contains shell scripts that allow to extract/install the
-game data under linux without wine from the CD, demo, GOG.com installer or any
+game data under Linux without Wine from the CD, demo, GOG.com installer or any
 fully patched Arx Fatalis install respectively. Also see
 http://wiki.arx-libertatis.org/Installing_the_game_data_under_Linux
 
