--- a/deb/innoextract/debian/changelog
+++ b/deb/innoextract/debian/changelog
@@ -1,3 +1,13 @@
+innoextract (1.3-0.1) stable; urgency=low
+
+  * New upstream release 1.3:
+  * Respect --quiet and --silent for multi-file installers
+  * Compile in C++11 mode if supported
+  * Warn about unsupported setup data versions
+  * Add support for Inno Setup 5.5.0 installers
+
+ -- Daniel Scharrer <daniel@constexpr.org>  Tue, 03 Jul 2012 18:19:42 +0200
+
 innoextract (1.2-0.2) stable; urgency=low
 
   * Install the upstream changelog file with the correct name.
