--- a/arx-libertatis/deb/debian/changelog
+++ b/arx-libertatis/deb/debian/changelog
@@ -1,3 +1,9 @@
+arx-libertatis (1.0.3-0.2) stable; urgency=low
+
+  * Fix build with CMake 2.8.10
+
+ -- Daniel Scharrer <daniel@constexpr.org>  Tue, 07 Dec 2012 15:14:42 +0100
+
 arx-libertatis (1.0.3-0.1) stable; urgency=low
 
   * Bump version to 1.0.3:
