--- a/innoextract/deb/changelog
+++ b/innoextract/deb/changelog
@@ -1,3 +1,22 @@
+innoextract (1.4-0.1) stable; urgency=low
+
+  * Bump version to 1.4 (new upstream release):
+  * Fixed issues with the progress bar in sandbox environments
+  * Fixed extracting very large installers with 32-bit innoextract builds
+  * Improved handling
+  * The --list command-line option can now combined with --test or --extract
+  * The --version command-line option can now be modified with --quiet
+    or --silent
+  * Added support for preserving timestamps of extracted files
+    (enabled by default)
+  * Added a --timestamps (-T) command-line options to control or disable
+    file timestamps
+  * Added an --output-dir (-d) command-line option to control where files
+    are extracted
+  * Various bug fixes and tweaks
+
+ -- Daniel Scharrer <daniel@constexpr.org>  Mon, 11 Mar 2013 17:19:38 +0100
+
 innoextract (1.3-0.1) stable; urgency=low
 
   * New upstream release 1.3:
