innoextract: Add changelog for 1.4-windows-r1

--- a/innoextract/changes/1.4.md
+++ b/innoextract/changes/1.4.md
@@ -16,3 +16,10 @@
 * Added an `--output-dir` (`-d`) command-line option to control where files are extracted
 * Added various CMake options to fine-tune the build process
 * Various bug fixes and tweaks
+
+Changes for 1.4-windows-r1:
+
+* This is a Windows-specific hotfix release, no other platforms are affected
+* Fixed a crash on startup under Windows
+* Reduced progress bar flickering under Windows
+* Fixed original console text color not being restored under Windows
