--- a/arx-libertatis/deb/changelog
+++ b/arx-libertatis/deb/changelog
@@ -1,3 +1,10 @@
+arx-libertatis (1.1.1-0.1) stable; urgency=low
+
+  * Bump version to 1.1.1 (new upstream release):
+  * Fixed map marker labels not being saved
+
+ -- Daniel Scharrer <daniel@constexpr.org>  Wed, 17 Jul 2013 04:16:40 +0200
+
 arx-libertatis (1.1-0.2) stable; urgency=low
 
   * Include arx-install-data script in package
