--- a/arx-libertatis/deb/changelog
+++ b/arx-libertatis/deb/changelog
@@ -1,3 +1,10 @@
+arx-libertatis (1.1.2-0.1) stable; urgency=low
+
+  * Bump version to 1.1.2 (new upstream release):
+  * Fixed a crash when hovering over map markers after the window was resized
+
+ -- Daniel Scharrer <daniel@constexpr.org>  Thu, 17 Oct 2013 19:24:57 +0200
+
 arx-libertatis (1.1.1-0.1) stable; urgency=low
 
   * Bump version to 1.1.1 (new upstream release):
