--- a/innoextract/changes/1.4.md
+++ b/innoextract/changes/1.4.md
@@ -23,3 +23,8 @@ Changes for 1.4-windows-r1:
 * Fixed a crash on startup under Windows
 * Reduced progress bar flickering under Windows
 * Fixed original console text color not being restored under Windows
+
+Changes for 1.4-windows-r2:
+
+* This is a Windows-specific hotfix release, no other platforms are affected
+* Fixed running innoextract under Windows XP
