innoextract: Release version 1.5

--- a/innoextract/deb/changelog
+++ b/innoextract/deb/changelog
@@ -1,3 +1,15 @@
+innoextract (1.5-0.1) stable; urgency=low
+
+  * Bump version to 1.5 (new upstream release):
+  * Added support for Inno Setup 5.5.6 installers
+  * Added --include and --exclude-temp options to filter extracted files
+  * Improved handling of file collisions and added a --collisions option to control the behavior
+  * Added support for newer GOG.com multi-part installers via the --gog option
+  * Added support for building without iconv, using builtin conversions and/or Win32 API instead
+  * Various bug fixes and improvements
+
+ -- Daniel Scharrer <daniel@constexpr.org>  Thu, 24 Sep 2015 22:54:26 +0200
+
 innoextract (1.4-0.1) stable; urgency=low
 
   * Bump version to 1.4 (new upstream release):
