--- a/innoextract/deb/changelog
+++ b/innoextract/deb/changelog
@@ -1,3 +1,14 @@
+innoextract (1.6-0.1) stable; urgency=low
+
+  * Added support for Inno Setup 5.5.7 (and 5.5.8) installers
+  * Added a --collisions=rename-all option
+  * Fixed issues with the --collisions=rename option
+  * Unsafe characters in special constant strings (ie : in {code:…}) are now replaced with $
+  * Windows: Fixed progress bar flickering while printing extracted filenames
+  * Windows binaries: Fixed crash on platforms without AVX support
+
+ -- Daniel Scharrer <daniel@constexpr.org>  Fri, 25 Mar 2016 00:27:10 +0100
+
 innoextract (1.5-0.1) stable; urgency=low
 
   * Bump version to 1.5 (new upstream release):
