--- a/innoextract/deb/changelog
+++ b/innoextract/deb/changelog
@@ -1,3 +1,20 @@
+innoextract (1.8-0.1) stable; urgency=low
+
+  * Bump version to 1.8 (new upstream release):
+  * Added support for Inno Setup 5.6.2 to 6.0.2 installers
+  * Added support for modified Inno Setup variants
+  * Added support for older Inno Setup installers, including My Inno Setup
+    Extensions installers
+  * Encoding for non-Unicode installers is now determined from the languages
+    supported by the installer, overridable using the --codepage option
+  * Changed filesystem and output encoding to WTF-8 (extended UTF-8) to represent
+    broken UTF-16 data
+  * The architecture-specific suffixes @32bit and @64bit are now used to
+    disambiguate colliding files
+  * Fixed various bugs and improved robustness
+
+ -- Daniel Scharrer <daniel@constexpr.org>  Sun, 15 Sep 2019 09:52:36 +0200
+
 innoextract (1.7-0.1) stable; urgency=low
 
   * Bump version to 1.7 (new upstream release):
