arx-libertatis: Use HTTPS links

--- a/arx-libertatis/changes/1.1.md
+++ b/arx-libertatis/changes/1.1.md
@@ -19,16 +19,16 @@ Fixed Bugs:
 
 * Fixed Am Shaegar accelerating too much during slow frames (bug #185)
 * Increased jump distance to fix some jumps that have become frustratingly hard (bug #413)
-* Replaced [DevIL](http://openil.sourceforge.net/) with [stb_image](http://nothings.org/stb_image.c) for image loading (task #352)
+* Replaced [DevIL](http://openil.sourceforge.net/) with [stb_image](https://nothings.org/stb_image.c) for image loading (task #352)
 * Fixed a script evaluation bug when looking up Entity-dependent special variables
 * Fixed a crash when evaluating script variables
 * Fixed a crash caused by entities without an attached 3D object (bug #434)
 * Fixed a crash in the `playanim` script command (bug #383)
 * Fixed a crash when rendering text ending with two newlines
 * Fixed a crash caused by bad window sizes or font loading / texture creation problems (bug #444)
-* Windows: Fixed crashes and missing sounds due to bad OpenAL implementations by bundling [OpenAL Soft](http://kcat.strangesoft.net/openal.html) (task #435)
+* Windows: Fixed crashes and missing sounds due to bad OpenAL implementations by bundling [OpenAL Soft](https://kcat.strangesoft.net/openal.html) (task #435)
 * Linux: Fixed improper handling of set-but-empty $XDG_* variables
-* Merged remaining fixes from Nuky's [arx-fatalis-fixed](http://code.google.com/p/arx-fatalis-fixed/): (task #276)
+* Merged remaining fixes from Nuky's [arx-fatalis-fixed](https://code.google.com/archive/p/arx-fatalis-fixed/): (task #276)
   * Tweaked portrait render zone in the new game screen
   * Fade out rune symbol flares when switching away from the spell page (Issue 13)
   * Fixed detected NPCs from the current level showing up on all level maps in the book (Issue 12)
