arx-libertatis: Fix section titles in changelog

--- a/arx-libertatis/changes/1.2.md
+++ b/arx-libertatis/changes/1.2.md
@@ -164,7 +164,7 @@ Windowing:
 * Linux: Translated the .desktop file to Italian and Spanish
 * macOS: Handle Command + Q shortcut to close the window
 
-=== Modding ===
+Modding:
 
 * Added support for loading uncompressed FTL files
 * Added a blender plugin for FTL files
@@ -176,7 +176,7 @@ Windowing:
 * Added the `-o` flag to the `spellcast` script command to orphan the spell after being cast
 * Added library and python wrapper for decompressing FTL files
 
-=== Debugging ===
+Debugging:
 
 * Added a script console (feature request #356)
 * Added more debug views and made the key binding configurable (feature request #1500)
@@ -188,7 +188,7 @@ Windowing:
 * Changed to OpenGL debug context and enabled ARB_debug_output for debug builds or with the `--debug-gl` option
 * Added a config option for the vertex streaming buffer size
 
-=== Tools ===
+Tools:
 
 * Added support to `arxunpak` to extract all resources as seen by the game (default when no arguments are given)
 * Added support to `arxunpak` to create resource manifests with checksums
@@ -197,7 +197,7 @@ Windowing:
 * Unix: Added support for different localized demo versions to the data install script
 * Unix: Fixed support for copying non-English data files from Steam installs in the data install script (bug #829)
 
-=== Performance ===
+Performance:
 
 * A '''lot''' of code cleanup and various performance tweaks
 * Reduced number of redundant OpenGL state changes
@@ -213,7 +213,7 @@ Windowing:
 * Windows: The OpenGL context is no longer re-initialized on resolution changes
 * Unix: Enabled `-ffast-math` in release builds (was already enabled for MSVC)
 
-=== Other Fixes ===
+Other Fixes:
 
 * Significantly improved the item-world collision test: thrown or dropped items should no longer get stuck in walls, hover above the ground or fall through the ground or walls (bug #50, #556, #956)
 * Fixed screenshot shortcut (F10) always overriding the same file
@@ -246,7 +246,7 @@ Windowing:
 * Fixed problems when loading save files with bugged entity positions (bug #894, #995)
 * Fixed asserts with very high player stats not obtainable during normal gameplay  (bug #942)
 
-=== Technical Changes ===
+Technical Changes:
 
 * Fixed build with CMake 3.5.0 or newer
 * Fixed Windows XP support with newer MSVC versions
@@ -283,7 +283,7 @@ Windowing:
 * Windows: Support using a 32-bit crash reporter for a 64-bit arx process
 * Windows: Added Unicode filesystem support (feature request #786)
 
-=== Removed Features ===
+Removed Features:
 
 * DirectX backends (Direct3D, DirectSound, DirectInput)
 * Video bit depth option
